Refactor code
Code refactored according to sonar lint rules and suggestions