@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryService {
@@ -29,7 +28,7 @@ public class CategoryService {
     public List<CategoryDto> getCategories() {
         return categoryRepo.findAll().stream()
                 .map(mapper::mapTo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CategoryDto getById(Integer id) {
